# moreinsight

./: .gitignore  insight.sqlagent.mode.md  main.py  pyproject.toml  requirements.txt  t1.py  t2.py  t3.py
a2a/: agent.py
adkdemo/: adkMCPClient.py  agent.py
adkdemo/.adk/: session.db
adkmcp/: agent.py
mcp/: __init__.py  client.py  server.py
src/: sql_agent.py  sql_tools.py
ui/: main.py
